[package]
name = "balloon-proto"
version = "0.0.0"
edition = "2018"
description = "Bindings to the official prototype implementation of the Balloon hashing algorithm"
readme = "README.md"
repository = "https://github.com/daxpedda/balloon-proto/"
license = "MIT OR Apache-2.0"
keywords = ["balloon", "bindings", "password", "security", "hashing"]
categories = ["authentication", "api-bindings", "cryptography"]
exclude = ["/.github"]
resolver = "2"

[dependencies]
thiserror = "1"

[dev-dependencies]
anyhow = "1"

[build-dependencies]
anyhow = "1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
